--- a/frontend/assets/css/preset1.css
+++ b/frontend/assets/css/preset1.css
@@ -43,7 +43,7 @@ a,.nav li a:hover,.navbar-default .navbar-nav>li>a:focus,.navbar-default .navbar
 }
 
 #main {
-	background-image: url(../img/main.png);
+	background-image: url(../img/img14.jpg);
 }
 
 #download.parallax-section:before {
